--- a/JoTakip - Bilgisayar Stok Takip Sistemi/UI/Pages/StokSorgulamaPage.xaml
+++ b/JoTakip - Bilgisayar Stok Takip Sistemi/UI/Pages/StokSorgulamaPage.xaml
@@ -9,8 +9,7 @@
       Title="StokSorgulamaPage">
 
     <Border>
-        <Border 
-                CornerRadius="10"
+        <Border CornerRadius="10"
                 Margin="15 15 15 15"
                 Width="750"
                 Height="500">
