--- a/JoTakip - Bilgisayar Stok Takip Sistemi/UI/Styles/Buttons.xaml
+++ b/JoTakip - Bilgisayar Stok Takip Sistemi/UI/Styles/Buttons.xaml
@@ -101,7 +101,7 @@
                         <EventTrigger RoutedEvent="MouseEnter">
                             <BeginStoryboard>
                                 <Storyboard>
-                                    <ColorAnimation To="Beige" Duration="0:0:0.3" Storyboard.TargetName="border" Storyboard.TargetProperty="Background.Color"/>
+                                    <ColorAnimation To="Azure" Duration="0:0:0.3" Storyboard.TargetName="border" Storyboard.TargetProperty="Background.Color"/>
                                 </Storyboard>
                             </BeginStoryboard>
                         </EventTrigger>
